# tama

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  tama_full_rfc.md
docs/: astro.config.mjs
docs/src/content/docs/: index.mdx
docs/src/content/docs/about/: competitor-analysis.md
docs/src/content/docs/getting-started/: installation.md
examples/00-deep-research/: report.md  tama.toml
examples/00-deep-research/agents/research/: AGENT.md  reduce.md
examples/00-deep-research/agents/research-angle/: AGENT.md
examples/00-deep-research/agents/research-pipeline/: AGENT.md
examples/00-deep-research/agents/reviewer/: AGENT.md
examples/00-deep-research/skills/files/: SKILL.md
examples/00-deep-research/skills/memory/: SKILL.md
examples/00-deep-research/skills/search-web/: SKILL.md
examples/06-critic/agents/blog-writer/: AGENT.md  critique.md
examples/11-debate/agents/debate/: AGENT.md
examples/13-all-patterns/agents/debate/: AGENT.md
examples/13-all-patterns/agents/write/: AGENT.md
examples/14-airline-service/agents/airline/: AGENT.md
examples/17-it-incident/agents/incident-analyst/: AGENT.md
examples/20-code-review/agents/code-reviewer/: AGENT.md
examples/21-ai-debate/agents/ai-debate/: AGENT.md
src/cmd/: brew.rs  runs.rs  view.rs
src/runtime/: debug_hook.rs  graph.rs  rollbacker.rs  tracer.rs
src/runtime/patterns/: fsm.rs  human.rs
src/skill/: manifest.rs
